Add lab test result management for staff